# keepkey-firmware

./: .clang-format  .cppcheck-suppressions  .dockerignore  .gdbinit  .gitattributes  .gitignore  .gitleaksignore  .gitmodules  .gittrees  .sops.yaml  CMakeLists.txt  DockerStart.sh  Dockerfile  Dockerfile.emulator  Dockerfile.rust  InstallToolchain.sh  Jenkinsfile  Makefile  README.carbon  README.carbon.md  README.md  RebuildAll.sh  ReleaseNote.txt  SConstruct  SECURITY.md  armDockerStart.sh  armtools.sha256sum  b  beta_v5.0.1.tar.bz2  debug.sh  docker_build.sh  docker_build2.sh  docker_build_device.sh  docker_build_firmware_debug.sh  docker_build_keepkey_debug.sh  docker_build_keepkey_release.sh  docker_build_manufacturer_debug.sh  docker_build_manufacturer_release.sh  docker_build_pb.sh  docker_build_protos.sh  (+29 more)
.circleci/: config.yml
.github/: CODEOWNERS  GIT-FLOW.md
bitcoin/: SConscript
bootloader/: SConscript
bootstrap/: SConscript
crypto/: SConscript
docs/: ArmBuild.md  Build.md  Coins.md  Dev.md  Host.md  README.md  Release.md  Storage.md  StorageV1.md  StorageV3.md
fuzzer/: CMakeLists.txt
fuzzer/firmware/: CMakeLists.txt  eos_formatAsset.cpp  eos_formatName.cpp  ripple_decode.cpp
include/: aes_sca  nanopb.h  pb.h  pb_common.h  pb_decode.h  pb_encode.h  qrenc
interface/: SConscript  build_protos.sh
keepkey/: SConscript
keepkey-firmware/: Cargo.toml
keepkey-firmware/src/: main.rs  usb.rs
keepkey-rs/: Cargo.toml
keepkey-rs/src/: kklib.rs  lib.rs
keepkey-rs/src/kklib/: bindings.rs  board.rs  canvas_mutex_guard.rs  firmware.rs  rand.rs  types.rs  usb.rs
keepkey-rs/src/kklib/types/: canvas.rs  enums.rs
keepkey-rs/src/kklib/usb/: keepkey_interface.rs  peripheral.rs  winusb.rs
keepkey_app/: SConscript
keepkey_board/: SConscript
keepkey_display/: SConscript
keepkey_poc/: SConscript
lib/: CMakeLists.txt
lib/board/: CMakeLists.txt  check_bootloader.c  common.c  confirm_sm.c  draw.c  font.c  keepkey_board.c  keepkey_button.c  keepkey_display.c  keepkey_flash.c  keepkey_leds.c  keepkey_spidisplay.c  keepkey_usart.c  layout.c  memcmp_cst.S  memcmp_s.S  memcmp_s.c  memory.c  messages.c  mmhusr.c  msg_dispatch.c  otp.c  pin.c  pubkeys.c  reexport.c  resources.c  rng.c  signatures.c  startup.s  strlcat.c  strlcpy.c  supervise.c  timer.c  u2f.c  udp.c  usb.c  usb21_standard.c  usb_driver.c  util.c  variant.c  (+2 more)
lib/board/ssd1351/: fonts.c  ssd1351.c
lib/board/variant/keepkey/: logo.c  resources.c
lib/board/variant/mfr/: logo.c  memory.c  resources.c
lib/board/variant/salt/: logo.c
lib/crypto/: CMakeLists.txt  address.c  aes_modes.c  aescrypt.c  aeskey.c  aestab.c  base58.c  bignum.c  bip32.c  bip39.c  curves.c  ecdsa.c  ed25519.c  hmac.c  nist256p1.c  pbkdf2.c  rand.c  ripemd160.c  secp256k1.c  sha2.c  sha3.c
lib/emulator/: CMakeLists.txt  oled.c  setup.c  udp.c
lib/firmware/: CMakeLists.txt  app_confirm.c  app_layout.c  authenticator.c  binance.c  bip85.c  check_bootloader.c  coins.c  comsos.c  cosmos.c  cosmos.h  crypto.c  eip712.c  eos.c  eos.h  erc721.c  ethereum.c  ethereum.h  ethereum_contracts.c  ethereum_tokens.c  exchange.c  fsm.c  fsm_msg_binance.h  fsm_msg_bip85.h  fsm_msg_coin.h  fsm_msg_common.h  fsm_msg_cosmos.h  fsm_msg_crypto.h  fsm_msg_debug.h  fsm_msg_eos.h  fsm_msg_ethereum.h  fsm_msg_kujira.h  fsm_msg_mayachain.h  fsm_msg_nano.h  fsm_msg_osmosis.h  fsm_msg_ripple.h  fsm_msg_solana.h  fsm_msg_stellar.h  fsm_msg_tendermint.h  fsm_msg_thorchain.h  (+44 more)
lib/firmware/eip712/: display.c  eip712.c  encoded_types.c  extended_types.c  fsm.h  util.c
lib/firmware/eip712/session/: session.c
lib/firmware/eip712/session/frame/: array.c  dynamicData.c  frame.c  struct.c
lib/firmware/eos-contracts/: eosio.system.c  eosio.token.c
lib/firmware/ethereum_contracts/: compound.c  contractfuncs.c  erc721.c  gnosisProxy.c  makerdao.c  saproxy.c  thortx.c  zxappliquid.c  zxliquidtx.c  zxswap.c  zxtransERC20.c
lib/firmware/variant/keepkey/: resources.c
lib/firmware/variant/mfr/: resources.c
lib/firmware/variant/salt/: resources.c
lib/firmware/whitelabel/keepkey/: resources.c
lib/firmware/whitelabel/mfr/: resources.c
lib/firmware/whitelabel/salt/: resources.c
lib/rand/: CMakeLists.txt  rng.c
lib/stm32/f2/: Makefile
lib/transport/: CMakeLists.txt  pb_common.c  pb_decode.c  pb_encode.c
lib/usb/: usb_f107.c
lib/variant/: CMakeLists.txt  keepkey.c  variant.c
lib/variant/keepkey/: keepkey.c  logo.c  logobtc.c
lib/variant/mfr/: logo.c
lib/variant/poweredBy/: logo.c  poweredBy.c
lib/variant/salt/: logo.c  salt.c
local/: bip32.c  rand.c
prototyping/: README.txt
public/: bip39.h  crypto.h  sha2.h
scripts/: debug.sh  format-source-files.sh  load-all.sh  load-bootloader.sh  load-bootstrap.sh  load-firmare.sh  load-fw.sh  load-mfr.sh  load-variant.sh  load.sh  readme.txt  u2f_genkeys.sh
site_scons/: arm-bootloader-gnu-eabi.toolchain.py  arm-none-gnu-eabi.toolchain.py  colors.py  scons_util.py  status.py  toolchains.py  x86_64-linux-gnu-none.toolchain.py
tools/: CMakeLists.txt
tools/blupdater/: CMakeLists.txt  blupdater.ld  header.s  main.c  startup.s
tools/bootloader/: CMakeLists.txt  bl_mpu.c  bootloader.ld  isr.s  main.c  main.h  signatures.c  startup.s  usb_flash.c  usb_flash.h
tools/bootstrap/: CMakeLists.txt  bootstrap.ld  main.c
tools/display_test/: CMakeLists.txt  display_test.ld  main.c  startup.s
tools/emulator/: CMakeLists.txt  display.h  main.cpp
tools/firedemo/: CMakeLists.txt  main.c
tools/firmware/: CMakeLists.txt  header.s  keepkey.ld  keepkey_main.c  startup.s
tools/rle-dump/: CMakeLists.txt  main.cpp
tools/variant/: CMakeLists.txt  blockpit.c  dash.c  fox.c  header.s  kaspersky.c  keepkey.c  salt.c  variant.ld
trezor-bitcoin/: SConscript
unittests/: CMakeLists.txt
unittests/board/: CMakeLists.txt  board.cpp  memcmp_s.cpp
unittests/crypto/: CMakeLists.txt  rand.cpp  vuln1845.cpp
unittests/firmware/: CMakeLists.txt  coins.cpp  cosmos.cpp  eos.cpp  ethereum.cpp  kujira.cpp  mayachain.cpp  nano.cpp  recovery.cpp  ripple.cpp  storage.cpp  thorchain.cpp  u2f.cpp  usb_rx.cpp
(+1413 files in other folders)
